syntax = "proto3";
package tickerfeed;

option go_package = "api/brokerrpc";

import "google/protobuf/timestamp.proto";

service FeedBroker {
  rpc StreamQuotes(stream StreamRequest) returns (stream Quotes) {}
}

message StreamRequest {
  // Subscribe to updates for these instruments.
  repeated int64 subscribe = 1;

  // Unsubscribe from updates for these instruments.
  repeated int64 unsubscribe = 2;
}

message Quotes {
  enum EncodingType {
    KAMBALA = 0;
  }

  EncodingType encoding = 1;
  repeated Quote quotes = 2;
}

message Quote {
  int64 instrument_id = 2;
  bytes quote_data = 3;
  google.protobuf.Timestamp timestamp = 4;
  int64 derived_future_price = 5;
}
